--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "KNCT" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -19,7 +19,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">My Site</a></h1>
+      <h1><%= link_to "KNCT Exchange Program", root_path%></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -28,9 +28,9 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
+    <li class="inactive"><%= link_to ' Home', root_path ,:class=>"fi-home"%></li>
     <% if user_signed_in? %>
       <li class="active"><%= link_to "#{current_user.email}", edit_user_registration_path %></a></li>
-
       <li class="inactive"><%= link_to 'New Post', new_post_path %></li>
       <li class="inactive"><%= link_to 'My Post', posts_path %></li>
       <li class="inactive"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></a>
