--- a/app/assets/stylesheets/pagination.sass
+++ b/app/assets/stylesheets/pagination.sass
@@ -22,6 +22,7 @@
     &:hover, &:focus
       color: #000033
       border-color: #000033
+
   .page_info
     background: #2e6ab1
     color: white
@@ -30,7 +31,7 @@
     margin-bottom: 0.3em
     text-align: center
     b
-      color: #000033
+      color: #336E7B
       background: #2e6ab1 + 60
       padding: 0.1em 0.25em
   /* self-clearing method:
