--- a/app/views/photo/show.html.erb
+++ b/app/views/photo/show.html.erb
@@ -3,26 +3,27 @@
 <div >
 <% @posts.each do |p|%>
 
-<p align="left"><%= p.created_at %></p>
-<div class="row " style="background:#2980b9; " >
-  <div class="large-2 columns" >
+<div class="row " style="background:#22313F; margin-top:2%; color:white" >
+  <div class="large-1 columns" >
     <ul class="side-nav">
 
           <%if @signin %>
+          <p align="center" style="background:#22A7F0; padding:5px"><%= p.votes_for.size%> <br>People <br>Like!</p>
     <% if @voted.include?(p) %>
-    <li><%= link_to ' Dislike', dislike_path(p), :style=>"color: red", :class=>"fi-minus" %></li>
+    <li><%= link_to '', dislike_path(p), :style=>"color: red", :class=>"fi-dislike",:align=>"center" %></li>
     <% else%>
-    <li><%= link_to ' Like', like_path(p), :style=>"color: #3498db", :class=>"fi-plus"  %></li>
+    <li><%= link_to '', like_path(p), :style=>"color: blue", :class=>"fi-like",:align=>"center"  %></li>
     <% end%>
-    <p>Score <%= p.votes_for.size%></p>
+    
     <% end%>
     </ul>
   </div>
-  <div class="large-6 columns">
 
-  <%= image_tag p.photo, :style=>"padding:13px; background:#3498db;"%>
 
+  <div class="large-7 columns" style="padding:0px">
+  <%= image_tag p.photo%>
   </div>
+
   <div class="large-4 columns " > 
       <fieldset>
     <legend>
@@ -34,23 +35,25 @@
   <div style="padding:10px;">
           <fieldset>
     <legend>
-      <h5>Post By</h5>
+      <h5 >Post By</h5>
     </legend>
-    <p><%= image_tag  @users.find_by(email: p.email).avatar, :width=>"50" %> <%= p.email %></p>
+    <p><%= image_tag  @users.find_by(email: p.email).avatar, :width=>"50" %> <%= p.email %>
+    </p>
+    
   </fieldset>
+  
   </div>
 
 </div>
   	
 
-
-
-
-
 <% end%>
 </div>
-<br>
-<div class="flickr_pagination" >
+<div class="row">
+<div class="apple_pagination " align="center" >
     <%= will_paginate @posts %>
   </div>
+</div>
 
+</div>
+<br>
