--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,11 +19,9 @@
     <%= f.label :description %><br>
     <%= f.text_area :description, :rows=>"5" %>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email, :value=>current_user.email, :readonly=>true %>
-  </div>
+    <%#= f.label :email %><br>
+    <%= f.hidden_field :email, :value=>current_user.email, :readonly=>true %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"button expand"%>
   </div>
 <% end %>
