--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Listing posts</h1>
-
+<div class="large-8 small-centered columns">
 <table>
   <thead>
     <tr>
       <th>Photo</th>
+      <th>Path</th>
       <th>Description</th>
       <th>Email</th>
       <th colspan="3"></th>
@@ -13,10 +14,10 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= image_tag post.photo %></td>
         <td><%= post.photo %></td>
         <td><%= post.description %></td>
         <td><%= post.email %></td>
-        <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -25,5 +26,4 @@
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
+</div>
