--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
+
+<div class="large-6 large-centered columns">
 <h1>New post</h1>
-
 <%= render 'form' %>
-
-<%= link_to 'Back', posts_path %>
+</div>
