--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
 
+<div class="large-6 large-centered columns">
 <p>
   <strong>Photo:</strong>
-  <%= @post.photo %>
+  <%=image_tag @post.photo %>
 </p>
 
 <p>
@@ -14,6 +14,5 @@
   <strong>Email:</strong>
   <%= @post.email %>
 </p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to "My Post", posts_path, :class=>"button expand"%>
+</div>
